Tested the RaspiCam for Timelapses

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.18.1",
     "oled-font-5x7": "^1.0.0",
     "oled-js": "^4.0.4",
-    "raspi-io": "^8.0.1"
+    "raspi-io": "^8.0.1",
+    "raspicam": "^0.2.14"
   }
 }
